--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,20 @@
 [tool.poetry]
-name = "streamlink-bot"
-version = "0.1.0"
-description = ""
+name = "twitch-radio"
+version = "1.0.0"
+description = "Discord bot that plays audio from a Twitch stream"
 authors = ["Tomás Farías <tomas@tomasfarias.dev>"]
+packages = [
+    { include="twitch_radio", from="." },
+]
+
+[tool.poetry.scripts]
+twitch-radio = "twitch_radio.__main__:main"
 
 [tool.poetry.dependencies]
 python = "^3.6"
 "discord.py" = "^1.4.1"
+streamlink = "^1.5.0"
+PyNaCl = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.6"
