Run regular pytest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
         run: poetry run mypy .
 
       - name: Test with pytest
-        run: poetry run pytest --cov . -n 2
+        run: poetry run pytest tests/ -vv
 
   deploy:
     runs-on: ubuntu-latest
